# J-gram

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: action.yaml
API/: api_blueprint.py
bookmarks/: bookmarks_blueprint.py  utils.py
dao/: classes.py  comments_dao.py  posts_dao.py
data/: bookmarks.json  posts.json
static/css/: styles.min.css.map
templates/: bookmarks.html  index.html  post.html  search.html  tag.html  user-feed.html
tests/: api_test.py  comments_dao_test.py  posts_dao_test.py
